fixed alignment issues with body/html padding

--- a/app/assets/stylesheets/page.css
+++ b/app/assets/stylesheets/page.css
@@ -1,9 +1,14 @@
+body, html{
+  padding:0;
+  margin:0;
+}
+
 body{
   font-family: Lucida Grande, Helvetica, Arial, sans-serif;
   background-color: sand;
-  height:100vh;
-  margin-left:-18px;
-  width: 100vw;
+  height:100%;
+  /*margin-left:-18px;*/
+  width: 100%;
 }
 .navbar-full{
   background-color:#333333;
@@ -58,7 +63,14 @@ img{
 #flash-notice{
   color: black;
   background-color: red;
-  width: 100vw;
+
+  font-size:15px;
+  text-align:center;
+  border:solid;
+  border-width:1px;
+  border-color:black;
+  /*margin-left:30px;*/
+  /*margin-right:30px;*/
 }
 #shopping-cart{
   font-size:20px;
